--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-health</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.firebase</groupId>
+      <artifactId>firebase-admin</artifactId>
+      <version>7.1.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
