Notifikationen via Firebase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.http.cors=true
-quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET,PUT,POST,OPTIONS
+quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET,POST,PUT,OPTIONS,DELETE
 quarkus.http.root-path=/api
 quarkus.swagger-ui.always-include=true
+fcm.url=https://fcm.googleapis.com/fcm/send
+fcm.key=AAAAwvSntFI:APA91bFyJaxYLc1nVyIwcDZRdG3AywQWfCR_VEttPYNyCMcPNeX4rQ6157BwR_qH0Caf0fKmUvZcxRUNf8xpPVrLn6Qr2SzSYB--SORuZij2mSYqt2OSbEjMjEXjbrTk5C6GGA7VtAkJ
